# newspulse

./: .dockerignore  .env  Makefile  docker-compose.yml  entrypoint.sh
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 644882d473d7_init_tables.py  97e79682f157_.py
backend/app/: admin.py  celery_app.py  main.py
backend/app/database/: db.py
backend/app/models/: article.py
backend/app/workers/: celery_app.py
deployment/: Dockerfile.backend  docker-compose.yml
