[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "sqladmin>=0.26.0",
    "sqlalchemy>=2.0.49",
    "trafilatura>=2.0.0",
    "uvicorn>=0.47.0",
]
